--- a/views/layout.erb
+++ b/views/layout.erb
@@ -10,7 +10,7 @@
    		<h1  id = "title">Generate QR Code</h1>
 <br><br>
 		<div id = "form">
-			<form action="/generateQR" method="POST">
+			<form action="/generateqr" method="POST">
 				<div class="row">
 				  <div class="col-lg-6">
 				    <div class="input-group">
