--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,19 +1,19 @@
 <html>
 	<head>
-		<meta content = "width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 		<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
+		<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-responsive.css">
 		<script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-
+ 
 	</head>
 	<body>
    		<h1  id = "title">Generate QR Code</h1>
 <br><br>
-		<div id = "form">
+		<div class = "container-fluid">
 			<form action="/generateqr" method="POST">
-				<div class="row">
-				  <div class="col-lg-6">
+				<div class="row-fluid">
+				  <div class="span8">
 				    <div class="input-group">
 				      <input type="text" class="form-control" name="Employee Id" id="emp_id" placeholder="Employee Id">
 				      <span class="input-group-btn">
