--- a/public/style.css
+++ b/public/style.css
@@ -6,3 +6,16 @@
 #form{
 	text-align: center;
 }
+
+#me1{
+	height: 80px;
+	font-size: 40px;
+}
+
+#me2{
+
+	text-align: center;
+	height: 80px;
+	width: 200px;
+	font-size: 40px;
+}
