--- a/views/layout.erb
+++ b/views/layout.erb
@@ -10,14 +10,14 @@
 	<body>
    		<h1  id = "title">Generate QR Code</h1>
 <br><br>
-		<div class = "container-fluid">
+		<div class = "container-fluid-right">
 			<form action="/generateqr" method="POST">
 				<div class="row-fluid">
-				  <div class="span8">
-				    <div class="input-group">
-				      <input type="text" class="form-control" name="Employee Id" id="emp_id" placeholder="Employee Id">
+				  <div id = "me" class="col-lg-12 col-xs-12 col-sm-12">
+				    <div id = "me11" class="input-group">
+				      <input id = "me1" type="text" class="form-control" name="Employee Id" id="emp_id" placeholder="Employee Id">
 				      <span class="input-group-btn">
-				        <input class="btn btn-default" type="submit" />
+				        <input id = "me2" class="btn btn-default" type="submit" />
 				      </span>
 				    </div>
 				  </div>
