--- a/public/style.css
+++ b/public/style.css
@@ -19,3 +19,11 @@
 	width: 200px;
 	font-size: 40px;
 }
+
+.center {
+	width: 200px;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 30px;
+}
