--- a/views/index.erb
+++ b/views/index.erb
@@ -10,7 +10,7 @@
    		<h1  id = "title">Generate QR Code</h1>
 <br><br>
 		<div class = "container-fluid-right">
-			<form action="/generateqr" method="POST">
+			<form action="/generateqr/create" method="POST">
 				<div class="row-fluid">
 				  <div id = "me" class="col-lg-12 col-xs-12 col-sm-12">
 				    <div id = "me11" class="input-group">
