--- a/views/qr_generated.erb
+++ b/views/qr_generated.erb
@@ -1,11 +1,11 @@
 <html>
 	<head>
+
 		<link rel="stylesheet" type="text/css" href="../style.css">
 		<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 		<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
-		<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-responsive.css">
 		<script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
- 
+ 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
    		<h1  id = "title">QR Code for <%= employee_id %></h1>		
