--- a/views/index.erb
+++ b/views/index.erb
@@ -9,18 +9,14 @@
 	<body>
    		<h1  id = "title">Generate QR Code</h1>
 <br><br>
-		<div class = "container-fluid-right">
+		<div class = "container-fluid">
 			<form action="/generateqr/create" method="POST">
-				<div class="row-fluid">
-				  <div id = "me" class="col-lg-12 col-xs-12 col-sm-12">
-				    <div id = "me11" class="input-group">
-				      <input id = "me1" type="text" class="form-control" name="Employee Id" id="emp_id" placeholder="Employee Id">
-				      <span class="input-group-btn">
-				        <input id = "me2" class="btn btn-default" type="submit" />
-				      </span>
-				    </div>
-				  </div>
+
+				<input id = "emp_id" type="text" class="form-control emp_box" name="Employee Id" placeholder="Employee Id">
+				<div class="center">
+					<input type="submit" class="btn btn-success">
 				</div>
+
 			</form>
 		</div>
 	</body>
