field type changed.

--- a/views/index.erb
+++ b/views/index.erb
@@ -16,9 +16,9 @@
    		<h1  id = "title">Select Date</h1>
 		<br><br>
 		<div class = "container-fluid">
-			<form action="total/numberOfGlasses" method="get">
-				<input id="start_date" type="text" placeholder="From">
-				<input id="end_date" type="text" Placeholder="To">
+			<form action="/total/numberOfGlasses" method="get">
+				Start Date: <input name = "startDate" id="start_date" type="text" placeholder="From">
+				End Date: <input name = "endDate" id="end_date" type="text" Placeholder="To">
 				<br></br>
 				<div class="center">
 					<input type="submit" class="btn btn-success">
