Employee ID store is fixed

--- a/views/index.erb
+++ b/views/index.erb
@@ -16,7 +16,7 @@
    		<h1  id = "title">Select Date</h1>
 		<br><br>
 		<div class = "container-fluid">
-			<form action="/total/numberOfGlasses" method="get">
+			<form action="/total/numberOfGlasses" method="post">
 				Start Date: <input name = "startDate" id="start_date" type="text" placeholder="From">
 				End Date: <input name = "endDate" id="end_date" type="text" Placeholder="To">
 				<br></br>
